--- a/CrimeManagementSystem/WebContent/include/css/common.css
+++ b/CrimeManagementSystem/WebContent/include/css/common.css
@@ -18,11 +18,21 @@ table td
 {
     vertical-align: middle;
 }
+
 td.labelCell
 {
     text-align: right;
     width: 200px;
 }
+
+td.topCell
+{	
+	 vertical-align: top;
+    text-align: center;
+    width: 200px;
+}
+
+
 div.errorIcon
 {
     border: none !important;
